--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26faa7a
+	base = 1deb5a2
 	trimbase = 
 	parent = release/lunar/rqt_rviz
-	previous = 
+	previous = 26faa7a
