--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8da8d0b
+	base = 311c26d
 	trimbase = 
 	parent = debian/lunar/rqt_rviz
-	previous = 
+	previous = 8da8d0b
