--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 53ec67f
+	base = 487d9e5
 	trimbase = 
 	parent = debian/lunar/rqt_rviz
-	previous = 
+	previous = 53ec67f
