--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c29997
+	base = 19eaa54
 	trimbase = 
 	parent = rpm/lunar/rqt_rviz
-	previous = 
+	previous = 6c29997
