--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25f3a45
+	base = 4a2665b
 	trimbase = 
 	parent = debian/indigo/rqt_rviz
-	previous = 
+	previous = 25f3a45
