--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ff7b7b
+	base = 41ca826
 	trimbase = 
 	parent = release/indigo/rqt_rviz
-	previous = 
+	previous = 9ff7b7b
