--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eada00d
+	base = f5592a5
 	trimbase = 
 	parent = rpm/indigo/rqt_rviz
-	previous = 
+	previous = eada00d
