--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5124094
+	base = 0795dee
 	trimbase = 
 	parent = debian/jade/rqt_rviz
-	previous = 
+	previous = 5124094
