--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91974ee
+	base = 90c29bd
 	trimbase = 
 	parent = release/jade/rqt_rviz
-	previous = 
+	previous = 91974ee
