--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 373c1f6
+	base = 79c9413
 	trimbase = 
 	parent = debian/kinetic/rqt_rviz
-	previous = 
+	previous = 373c1f6
