--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee4e0b5
+	base = 21e7311
 	trimbase = 
 	parent = debian/kinetic/rqt_rviz
-	previous = 
+	previous = ee4e0b5
