--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 979b0b5
+	base = 106279a
 	trimbase = 
 	parent = release/kinetic/rqt_rviz
-	previous = 
+	previous = 979b0b5
