--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bef9b96
+	base = e675a2c
 	trimbase = 
 	parent = rpm/kinetic/rqt_rviz
-	previous = 
+	previous = bef9b96
