--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(rqt_rviz_HDRS
 )
 
 if("${qt_gui_cpp_USE_QT_MAJOR_VERSION} " STREQUAL "5 ")
-  find_package(Qt5Widgets REQUIRED)
+  find_package(Qt5 REQUIRED COMPONENTS Widgets)
   qt5_wrap_cpp(rqt_rviz_MOCS ${rqt_rviz_HDRS})
   set(qt_LIBRARIES Qt5::Widgets)
 else()
