Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.7-0": ["Thu Apr 27 2017", "Louise Poubel", "louise@osrfoundation.org"]}
+{"0.5.7-0": ["Thu Apr 27 2017", "Louise Poubel", "louise@osrfoundation.org"], "0.5.8-0": ["Tue May 02 2017", "Louise Poubel", "louise@osrfoundation.org"]}
