--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ead928f
+	base = 50ed65a
 	trimbase = 
 	parent = debian/melodic/rqt_rviz
-	previous = 
+	previous = ead928f
