--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f3023ac
+	base = 3eb11ec
 	trimbase = 
 	parent = debian/melodic/rqt_rviz
-	previous = 
+	previous = f3023ac
