--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bb36f1e
+	base = 4030c2b
 	trimbase = 
 	parent = release/melodic/rqt_rviz
-	previous = 
+	previous = bb36f1e
