--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1bc858a
+	base = 349498e
 	trimbase = 
 	parent = rpm/melodic/rqt_rviz
-	previous = 
+	previous = 1bc858a
