master -> indigo-devel

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -12,8 +12,8 @@ tracks:
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: master
-    last_version: 0.5.7
+    devel_branch: indigo-devel
+    last_version: 0.5.10
     name: upstream
     patches: null
     release_inc: '0'
@@ -36,8 +36,8 @@ tracks:
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: master
-    last_version: 0.5.7
+    devel_branch: indigo-devel
+    last_version: 0.5.10
     name: upstream
     patches: null
     release_inc: '0'
@@ -60,8 +60,8 @@ tracks:
       -i :{release_inc} --os-name debian --os-not-required
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
-    devel_branch: master
-    last_version: 0.5.7
+    devel_branch: indigo-devel
+    last_version: 0.5.10
     name: upstream
     patches: null
     release_inc: '0'
