--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.7-0": ["Fri Apr 28 2017", "Louise Poubel", "louise@osrfoundation.org"], "0.5.10-0": ["Wed Jun 27 2018", "Louise Poubel", "louise@osrfoundation.org"]}
+{"0.5.7-0": ["Fri Apr 28 2017", "Louise Poubel", "louise@osrfoundation.org"], "0.5.10-1": ["Wed Jun 27 2018", "Louise Poubel", "louise@osrfoundation.org"], "0.5.10-0": ["Wed Jun 27 2018", "Louise Poubel", "louise@osrfoundation.org"]}
