Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.5.9-0": ["Thu May 03 2018", "Louise Poubel", "louise@osrfoundation.org"], "0.5.9-1": ["Thu May 03 2018", "Louise Poubel", "louise@osrfoundation.org"]}
+{"0.5.9-0": ["Thu May 03 2018", "Louise Poubel", "louise@osrfoundation.org"], "0.5.9-1": ["Thu May 03 2018", "Louise Poubel", "louise@osrfoundation.org"], "0.6.0-0": ["Wed Jun 27 2018", "Louise Poubel", "louise@osrfoundation.org"]}
