--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ae75866
+	base = 7225e8b
 	trimbase = 
 	parent = release/noetic/rqt_rviz
-	previous = 
+	previous = ae75866
