--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 08ff16b
+	base = 6c5ee15
 	trimbase = 
 	parent = debian/noetic/rqt_rviz
-	previous = 
+	previous = 08ff16b
