--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e84a14
+	base = b05bc61
 	trimbase = 
 	parent = debian/noetic/rqt_rviz
-	previous = 
+	previous = 7e84a14
