--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58ea352
+	base = d124494
 	trimbase = 
 	parent = rpm/noetic/rqt_rviz
-	previous = 
+	previous = 58ea352
