--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,10 @@
 <package>
   <name>rqt_rviz</name>
-  <version>0.6.1</version>
+  <version>0.7.0</version>
   <description>rqt_rviz provides a GUI plugin embedding <a href = "http://www.ros.org/wiki/rviz">RViz</a>.
     Note that this rqt plugin does NOT supersede RViz but depends on it.
   </description>
+  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>
   <maintainer email="louise@osrfoundation.org">Louise Poubel</maintainer>
 
   <license>BSD</license>
@@ -17,7 +18,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>boost</build_depend>
-  <build_depend>pluginlib</build_depend>
+  <build_depend>class_loader</build_depend>
   <build_depend>qtbase5-dev</build_depend>
   <build_depend>rqt_gui</build_depend>
   <build_depend>rqt_gui_cpp</build_depend>
