Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.1-1": ["Tue May 12 2020", "Louise Poubel", "louise@osrfoundation.org"]}
+{"0.7.0-1": ["Tue Jun 22 2021", "Robert Haschke", "rhaschke@techfak.uni-bielefeld.de"], "0.6.1-1": ["Tue May 12 2020", "Louise Poubel", "louise@osrfoundation.org"]}
